頂点シェーダあたりまで実装した

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>OpenGLライクなライブラリ サンプル</title>
+	<script type="text/javascript" src="js/gl-matrix.js"></script>
+    <script type="text/javascript" src="js/require.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
 <h1>OpenGLライクなライブラリ サンプル</h1>
