* アプリとライブラリに分離 * rjsで固めた。

--- a/example/asset/index.html
+++ b/example/asset/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>OpenGLライクなライブラリ サンプル</title>
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/gl-matrix.js"></script>
-    <script type="text/javascript" src="js/require.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="gl-matrix.js"></script>
+    <script type="text/javascript" src="require.js" data-main="all"></script>
 </head>
 <body>
 <h1>OpenGLライクなライブラリ サンプル</h1>
