--- a/example/asset/index.html
+++ b/example/asset/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="lib/platform/platform.js"></script>
 	<script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="lib/gl-matrix/dist/gl-matrix.js"></script>
+	<script type="text/javascript" src="lib/threejs/build/three.js"></script>
 	<link rel="import" href="elements/control.html"></link>
 <style>
 #left {
