* 座標以外の頂点属性の補完を行えるように修正 * リファクタリング

--- a/example/asset/elements/control.html
+++ b/example/asset/elements/control.html
@@ -73,6 +73,9 @@
 
 <script>
 Polymer('cheapgl-controlpanel', {
+	modelsChanged: function() {
+		this.modelPath = "monkey.json";
+	}
 });
 </script>
 </polymer-element>
