* フォンシェーダ作りかけ

--- a/example/asset/elements/control.html
+++ b/example/asset/elements/control.html
@@ -15,11 +15,9 @@
 
 <div id="left">
 
-<textarea id="vert" class="source" cols="80" rows="20" style="float: left">
-{{vertSource}}
+<textarea class="source" value="{{vertSource}}" cols="80" rows="20" style="float: left">
 </textarea>
-<textarea id="frag" class="source" cols="80" rows="20">
-{{fragSource}}
+<textarea class="source" value="{{fragSource}}" cols="80" rows="20">
 </textarea>
 
 </div> <!-- end left -->
