* トーラスを描画するように修正

--- a/example/asset/elements/control.html
+++ b/example/asset/elements/control.html
@@ -74,7 +74,7 @@ Polymer('cheapgl-controlpanel', {
 	vertShader: "passthrough-vert.js",
 	fragShader: "passthrough-frag.js",
 	modelsChanged: function() {
-		this.modelId = "monkey";
+		this.modelId = "torus";
 	},
 	modelIdChanged: function() {
 		var modelId = this.modelId;
