--- a/example/asset/index.html
+++ b/example/asset/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>OpenGLライクなライブラリ サンプル</title>
+    <title>OpenGL風APIテスト</title>
     <script type="text/javascript" src="/bower_components/platform/platform.js"></script>
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="/bower_components/gl-matrix/dist/gl-matrix.js"></script>
