--- a/example/asset/elements/control.html
+++ b/example/asset/elements/control.html
@@ -1,9 +1,9 @@
-<script src="/bower_components/lodash/dist/lodash.js"></script>
-<link rel="import" href="/bower_components/polymer/polymer.html">
-<link rel="import" href="/bower_components/core-ajax/core-ajax.html">
-<link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
-<link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
+<script src="../../bower_components/lodash/lodash.js"></script>
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/core-ajax/core-ajax.html">
+<link rel="import" href="../../bower_components/core-header-panel/core-header-panel.html">
+<link rel="import" href="../../bower_components/core-toolbar/core-toolbar.html">
+<link rel="import" href="../../bower_components/paper-tabs/paper-tabs.html">
 
 <polymer-element name="cheapgl-controlpanel">
   <template>
